[gd_scene load_steps=9 format=3 uid="uid://dj04gpqp0lx15"]

[ext_resource type="Script" uid="uid://dqri55g4ymo54" path="res://scripts/incubation_station.gd" id="1_ck6wp"]
[ext_resource type="Texture2D" uid="uid://0bfoddy6eyib" path="res://assets/eggs/Incubator Color.png" id="1_fqn86"]
[ext_resource type="PackedScene" uid="uid://dfmpxw6jsmck3" path="res://scenes/egg.tscn" id="2_y04yn"]
[ext_resource type="Texture2D" uid="uid://0bu6ryyy217l" path="res://assets/eggs/egg_questionmark.png" id="4_psc80"]

[sub_resource type="AtlasTexture" id="AtlasTexture_y04yn"]
atlas = ExtResource("1_fqn86")
region = Rect2(0, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_ck6wp"]
atlas = ExtResource("1_fqn86")
region = Rect2(26, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_yplrf"]
atlas = ExtResource("1_fqn86")
region = Rect2(52, 0, 26, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ck6wp"]
size = Vector2(52, 50)

[node name="IncubationStation" type="Area2D" groups=["devices", "incubation_station"]]
script = ExtResource("1_ck6wp")

[node name="BoxSprite" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = SubResource("AtlasTexture_y04yn")

[node name="NestSprite" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = SubResource("AtlasTexture_ck6wp")

[node name="EggPositionMarker" type="Marker2D" parent="."]
position = Vector2(0, -10)

[node name="Egg" parent="EggPositionMarker" instance=ExtResource("2_y04yn")]

[node name="EggCoverSprite" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = SubResource("AtlasTexture_yplrf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_ck6wp")

[node name="PlaceEggButton" type="Button" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -26.0
offset_right = 26.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("4_psc80")
icon_alignment = 1
expand_icon = true

[node name="HoverPanelContainer" type="PanelContainer" parent="."]
visible = false
z_index = 5
offset_left = 30.0
offset_top = -65.0
offset_right = 194.0
offset_bottom = 66.0
metadata/_edit_group_ = true

[node name="BoxContainer" type="BoxContainer" parent="HoverPanelContainer"]
layout_mode = 2
vertical = true

[node name="CreatureLabel" type="Label" parent="HoverPanelContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Duck"

[node name="AgeLabel" type="Label" parent="HoverPanelContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Age: 631 ticks"

[node name="TemperatureLabel" type="Label" parent="HoverPanelContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Temperature: 21.5 Â°C"

[node name="LightLevelLabel" type="Label" parent="HoverPanelContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "LightLevel: DARK"

[node name="RotationTimerLabel" type="Label" parent="HoverPanelContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Rotation: 12.0 sec"

[node name="HappinessLabel" type="Label" parent="HoverPanelContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Happiness: 63/100"

[node name="GrowthLabel" type="Label" parent="HoverPanelContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "growth ticks: 512"

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="PlaceEggButton" to="." method="_on_place_egg_button_pressed"]
